--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -76,18 +76,18 @@
 \section{Introduction}
 Numerous physical phenomena in materials science, such as crystal plasticity, phase transitions, twinning~\cite{Clayton2011-xq}, and fracture ~\cite{Baldelli2014-ho,Baldelli2021-gc}, can be described by non-linear energy functionals at the mesoscale. 
 % {When these systems evolve,}, equilibrium configurations are critical states the energy functional that satisfy boundary conditions and an optimality criterion. 
-The configurational variables within these energy functionals evolve under external loading, NAVIGATING equilibrium states. These states corresponds to critical points of the energy functional, satisfying both boundary conditions and an optimality criterion.
+The configurational variables within these energy functionals evolve under external loading, navigating equilibrium states. These states corresponds to critical points of the energy functional, satisfying both boundary conditions and an optimality criterion.
 This optimization process is achieved through incremental minimization along a loading program. Outcomes of such optimization are fields
 (e.g., displacement, strain, stress), energy components, and order parameters depending on the model considered. The corresponding microstructures are crucial to understand and improve the mechanical behavior of materials.
 
-Functionals of the type $\Psi(\mathbf u)$, non-convex in their argument  $\mathbf u$ (the displacement field) are frequently employed in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, a second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ is an internal variable that elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in the variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
+Functionals of the type $\Psi(\mathbf u)$, non-convex in their argument  $\mathbf u$ (a displacement field) are frequently employed in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, a second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ is an internal variable that elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in the variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
 
-In both cases, one deals with the problem of finding  configurations that satisfy $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$, $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$, or at least some \emph{necessary conditions} for energy optimality, possibly satisfying constraints. 
-The multiple minima of the functionals and the multitude of equilibrium states accessible during loading, create many possible evolution paths. One can expect that under a quasi-static loading protocol, the system navigates among metastable states which are continuous branches of equilibria. These branches can bifurcate and intersect as well as terminate at points where the state’s stability is lost.
+In both cases, one deals with the problem of finding  configurations that satisfy $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$, $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$, or at least some \emph{necessary conditions} for energy optimality and, potentially, satisfying constraints. 
+The multiple minima of the functionals and the multitude of equilibrium states accessible during loading spawn many possible evolution paths. One can expect that under a quasi-static loading protocol, the system navigates among metastable states which are continuous branches of equilibria. These branches can bifurcate and intersect as well as terminate at points where the state’s stability is lost.
 % \added[id=ALB]{Thus, whether smooth or sudden, transitions lead the system to a new equilibrium state.}
 At an instability threshold, the system restabilizes in a dissipative manner through a state transition, whether smoothly or suddenly.
 In this quasi-static setting, how does the system choose a new locally stable equilibrium branch with lower energy?
-During an isolated switching event, new equilibrium branches can be determined using a steepest descent algorithm. However, because the energy functionals in our focus are strongly nonlinear, they may lack convexity in their arguments and thus exhibit multiple local minima or none at all. Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, those that are physically relevant.
+During an isolated switching event, new equilibrium branches can be determined using a steepest descent or a continuation algorithm. However, XXXX because the energy functionals in our focus are strongly nonlinear, they may lack convexity in their arguments and thus exhibit multiple local minima, or none at all. Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, those that are physically relevant.
 
 Bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of local blow-up behaviors at bifurcations points in terms of linearised (canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{}. 
 For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{} describe the scenario under which a system of equations can realise more than one smooth solution.
@@ -104,7 +104,7 @@ Brittle thin film system show pattern formation and complex branch transitions. 
 % bifurcation points are the critical loadings at which there is a multiplicity of solutions to the rate problem 
 % ----------
 
-The issue of stability is of a different kind when constraints play a role.
+Stability is a conceptually different notion when constraints play a role.
 The loss of such a property for a stationary points of an energy functional is of paramount importance in materials science and engineering. Illustrative in this sense are Euler buckling~\cite{Bettiol2020-ey}, wrinkling in thin films~\cite{Hutchinson2013-jk}, homogeneous nucleation of dislocations in a crystal~\cite{Carpio2005-bv,Plans2007-cx,Baggio2019-rs,Mayer2022-km,Baggio2023-qu}, buckling of lattice structures~\cite{Combescure2016-dy,Bertoldi2008-au}, nucleation of cracks in soft solids or in pantographic structures \cite{Riccobelli2023-fc,Salman2021-mn}, plastic  avalanches in crystals or amorphous materials \cite{Zhang2020-ax,Weiss2021-db,Yang2020-zm}.
 
 The absence of analytical solutions in strongly non-linear settings requires resorting to numerical methods for computing and predicting equilibrium configurations that correspond to the minima of an energy functional. The minimization process involves discretizing the continuum fields onto a computational grid using methods such as finite elements, finite differences, or spectral techniques. Afterwards, an iterative solver is employed to seek minimum energy states, with options including the Newton-Raphson method~\cite{Wick2017-bo}, fixed-point iteration~\cite{Chen2019-mn,Kirkesaether_Brun2020-wa,Storvik2021-cd}, line-search-based descent algorithms like steepest descent or conjugate gradient~\cite{Stiefel1952-fw,Dai1999-hz}, quasi-Newton methods such as the highly-efficient Limited-memory Broyden-Fletcher-Goldfarb-Shanno (\textsc{L-BFGS}) approach~\cite{Liu1989-kl} which involves approximating the Hessian matrix, or more recent advancements like the fast inertial relaxation engine (\textsc{FIRE})~\cite{Guenole2020-tc}. These solvers iteratively refine solutions starting from an initial guess provided as part of the solution procedure. Despite their widespread application, there remains a lack of clear understanding regarding the performance of these algorithms and their effectiveness in locating local minima. 
@@ -118,13 +118,23 @@ The first model describes a brittle thin film deposited on a stiff (rigid) subst
 
 Despite the one-dimensional setting we adopt here which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima.
 % , POSTPONING the need for two-dimensional analysis\comment[id=ALB]{Unclear}. 
-In the absence of an irreversibility constraint, bifurcation points from homogeneous solution can easily be calculated analytically and numerically, by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
-In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques. Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may return solutions that persist on unstable branches, thus lacking physical relevance. 
+In the absence of an irreversibility constraint, bifurcation points from homogeneous solution can easily be calculated analytically and numerically, by employing continuation techniques.
+%  all solutions connected to the homogeneous branch and their stability can be identified. 
+An \emph{equilibrium map} can be constructed in this setup, allowing all  {inhomogeneous} solutions connected to the homogeneous branch to be identified along with their stability. This enables us to monitor the solutions returned by various numerical optimization techniques and assess their observability.
+% In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques.
+ Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may return solutions that persist on unstable branches, thus lacking physical relevance. 
 We propose a remedy to this situation which involves utilizing information from the Hessian of the functional when it becomes singular. 
 % \added[id=ALB]{OPEN SYSTEMS, BIOLOGICAL APPLICATION, HEALING, REVERSIBLE DAMAGE} 
 To discuss this scenario we distinguish two settings, namely i) that in which damage is reversible and all small perturbations are admissible, and ii) the case where damage is subject to an irreversibility constraint which forbids healing. In the former scenario  negative variations of damage are allowed and indeed may occur - if convenient from an energetic viewpoint. In the second setting, instead, we consider damage as a unilateral irreversible process stemming from an irreducible one-directional pointwise growth constraint.
+{We emphasize that we consider the reversible case as a prototypical study, rather than for its general physical relevance. Not only because it allows us to construct an \emph{equilibrium map}, but also because it allows to highlight on physical grounds the mathematical differences between the reversible and irreversible cases. The study of the reversible setup may still be relevant in certain phase-field damage models where irreversibility is imposed only on crack sets that exceed a \emph{given} damage threshold, referred to as relaxed crack-set irreversibility \cite{Bourdin2000-pc, Kumar2020-xz, De-Lorenzis2020-rz}, or in models with softening elastic energy without irreversibility constraint \cite{Truskinovsky2010-st,Salman2021-mn,Baggio2023-yo}.}
 
-The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
+
+% The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
+
+
+{The rest of the paper is organized as follows. In Section \ref{sec:rigid}, we present one-dimensional phase-field fracture models with both rigid and compliant elastic foundations. In Section \ref{sec:stability} we focus on the analysis  of linear and non-linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we construct the equilibrium map in the reversible setup, discuss the selection of equilibrium branches using various numerical optimization algorithms, and explore how irreversibility affects the stability of solutions. In the final Section \ref{sec:discussion}  we summarize our results.}
+
+
 
 \paragraph{Notation.} We employ standard notation for scalar Sobolev spaces defined on the unit interval, such as $H^1(0, 1)$, derivtives of one-dimensional fields, and matrix indices. Subscripted $t$ means $t$-parametrised quantities, superscripted $(k)$ means $k$-th iterate of an iterative algorithm. 
 FINITE ELEMENT MATRICES AND VECTORS 
