--- a/paper/main.tex
+++ b/paper/main.tex
@@ -67,7 +67,7 @@
 
 
 \begin{abstract}
-In phase-field theories of brittle fracture, crack initiation, growth AND PATH SELECTION are investigated using non-convex energy functionals and a stability criterion. The lack of convexity with respect to the STATE poses difficulties to monolithic solvers that aim to solve for KINEMATIC AND INTERNAL VARIABLES, simultaneously. In this paper, we inquire into the effectiveness of quasi-Newton algorithms as an alternative to conventional Newton-Raphson solvers. These algorithms improve convergence by constructing a positive definite approximation to the full Hessian of the functional, bargaining improved covergence with the risk of missing bifurcation points and stability THRESHOLDS. Our study focuses on one-dimensional phase-field fracture models of brittle thin films on an elastic foundation. Within this framework, in the absence of irreversibility constraint, we construct an equilibrium map that represents all stable and unstable equilibrium states as a function of the external load, using well-known branch-following bifurcation techniques. Our main finding is that quasi-Newton algorithms fail to select stable evolution paths without exact full second variation information. To solve this issue, we perform a spectral analysis of the full Hessian, providing optimal perturbations that enable quasi-Newton methods to follow a stable and potentially unique path for crack evolution. Finally, we discuss the stability issues and optimal perturbations in the case when the damage irreversibility is present that effectively changes the topological structure of the set of admissible perturbations from a linear vector space to a convex cone.
+In phase-field theories of brittle fracture, crack initiation, growth AND PATH SELECTION are investigated using non-convex energy functionals and a stability criterion. The lack of convexity with respect to the state poses difficulties to monolithic solvers that aim to solve for kinematic and internal variables, simultaneously. In this paper, we inquire into the effectiveness of quasi-Newton algorithms as an alternative to conventional Newton-Raphson solvers. These algorithms improve convergence by constructing a positive definite approximation of the Hessian, bargaining improved covergence with the risk of missing bifurcation points and stability thresholds. Our study focuses on one-dimensional phase-field fracture models of brittle thin films on  elastic foundations. Within this framework, in the absence of irreversibility constraint, we construct an equilibrium map that represents all stable and unstable equilibrium states as a function of the external load, using well-known branch-following bifurcation techniques. Our main finding is that quasi-Newton algorithms fail to select stable evolution paths without exact  second variation information. To solve this issue, we perform a spectral analysis of the full Hessian, providing optimal perturbations that enable quasi-Newton methods to follow a stable and potentially unique path for crack evolution. Finally, we discuss the stability issues and optimal perturbations in the case when the damage irreversibility is present, changing the topological structure of the set of admissible perturbations from a linear vector space to a convex cone.
 \end{abstract}
 
 \textbf{Potential Journals}
